using ASM instead of javassist